# buh

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.gitea/workflows/: deploy.yml
asset/: deploy.sh  manifest.yml  readme.md
asset/config/: config.toml.tmpl
asset/firewalld/: buh-node.xml
asset/sudoers.d/: node-host.conf
asset/systemd/: buh-node-sweep.service  buh-node-sweep.timer  buh-node.service  buh.sysusers.conf
crates/buh-api/: Cargo.toml
crates/buh-api/src/: admin.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  peer.rs  router.rs  serve.rs  state.rs  tls.rs
crates/buh-api/tests/: admin_api.rs  blob_roundtrip.rs  pqmtls_handshake.rs  pqmtls_http.rs  relay_roundtrip.rs
crates/buh-cli/: Cargo.toml
crates/buh-cli/src/: main.rs
crates/buh-core/: Cargo.toml
crates/buh-core/src/: blob.rs  context.rs  error.rs  lib.rs  mailbox.rs  ports.rs
crates/buh-crypto/: Cargo.toml
crates/buh-crypto/fuzz/: Cargo.toml
crates/buh-crypto/fuzz/fuzz_targets/: invite_parse.rs  wire_decode.rs
crates/buh-crypto/src/: aead.rs  error.rs  ffi.rs  identity.rs  invite.rs  kem.rs  lib.rs  media.rs  pqxdh.rs  prekey.rs
crates/buh-crypto/src/ratchet/: chain.rs  header.rs  mod.rs
crates/buh-crypto/src/wire/: codec.rs  mod.rs  v1.rs
crates/buh-crypto/tests/: session_flow.rs  wasm.rs
crates/buh-data/: Cargo.toml
crates/buh-data/migrations/: 0001_init.sql  0002_peer_trust.sql
crates/buh-data/src/: error.rs  fs_blob.rs  lib.rs  migrate.rs  node_ca.rs  peer_trust.rs  s3_blob.rs  stack.rs  stub_settlement.rs  turso_mailbox.rs
crates/buh-e2e/: Cargo.toml
crates/buh-e2e/src/: main.rs
crates/buh-entities/: Cargo.toml
crates/buh-entities/src/: b64.rs  dto.rs  envelope.rs  error.rs  ids.rs  lib.rs  queue.rs  settlement.rs
doc/: client.md  design.md  plan.md  testnet.md
script/: infra-setup.sh
web/: index.html  package-lock.json  package.json  readme.md  vite.config.ts
web/src/: App.tsx
web/src/lib/: blob.ts  bytes.ts  demo.ts  keystore.ts  relay.ts
web/src/lib/crypto/: index.ts
