[package]
name = "buh-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "buh node daemon: blind relay/mailbox HTTP API."

[[bin]]
name = "buh-api"
path = "src/main.rs"

[features]
default = []
# Build the S3/MinIO blob backend into the daemon (forwards to buh-data/s3).
s3 = ["buh-data/s3"]

[dependencies]
buh-entities.workspace = true
buh-core.workspace = true
buh-data.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# PQ-mTLS ingress (Phase 6). aws-lc-rs (pulled by rustls-post-quantum) supplies X25519MLKEM768.
rustls.workspace = true
rustls-post-quantum.workspace = true
tokio-rustls.workspace = true
x509-parser.workspace = true
sha2.workspace = true
hex.workspace = true
# Serve the axum router over a tokio-rustls acceptor (axum::serve cannot take a TLS listener).
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }

[dev-dependencies]
tempfile.workspace = true
base64.workspace = true
turso.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
