[package]
name = "buh-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "buh data-access adapters (Turso datastore) implementing the buh-core ports."

[features]
default = []
# Enables the S3/MinIO blob backend (pulls the AWS SDK). Filesystem-only nodes omit it.
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types"]

[dependencies]
buh-entities.workspace = true
buh-core.workspace = true
turso.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true

# Per-node PQ-mTLS CA (the decentralised-CA deviation): generate the node CA and issue
# short-lived leaves. rcgen signs with a classical algorithm — the post-quantum strength is in
# the TLS key exchange (X25519MLKEM768), which is what harvest-now-decrypt-later threatens.
rcgen = { workspace = true, features = ["pem"] }
time.workspace = true
sha2.workspace = true
hex.workspace = true

# Blob backends.
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
x509-parser.workspace = true
