[package]
name = "buh-entities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "buh domain types, DTOs, and error enums (no I/O)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
base64.workspace = true
